--- a/index.html
+++ b/index.html
@@ -22,7 +22,72 @@
         </ul>
     </header>
     <main>
-
+        <div>
+            <section>
+                <h1>Эффективные решения <br /> для вашего бизнеса</h1>
+                <button type="button">Заказать услугу</button>
+            </section>
+        </div>
+        <section>
+            <h2>Особенности работы</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                 </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./images/box_1.jpg" alt="Алгоритмизация" width="370">
+                </li>
+                <li>
+                    <img src="./images/box_2.jpg" alt="Мобильный дизайн" width="370">
+                </li>
+                <li>
+                    <img src="./images/box_3.jpg" alt="Планшет с палитрой" width="370">
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/photo_1.jpg" alt="Фото продакт дизайнера" width="270">
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/photo_2.jpg" alt="Фото фронтенд девелопера" width="270">
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Develope</p>
+                </li>
+                <li>
+                    <img src="./images/photo_3.jpg" alt="Фото маркетолога" width="270">
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/photo_4.jpg" alt="Фото дизайнера" width="270">
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
         <address>
