--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
-    <main>
-        <div>
-            <section>
-                <h1>Эффективные решения <br /> для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
-            </section>
-        </div>
+    <main>        
+        <section>
+            <h1>Эффективные решения <br /> для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>       
         <section>
             <h2>Особенности работы</h2>
             <ul>
@@ -92,7 +90,7 @@
     <footer>
         <a href="">WebStudio</a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26 <br />
+            <p>г. Киев, пр-т Леси Украинки, 26 <br /></p>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br/>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
